<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/weightCalculated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Weight calculated below"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightCalculated"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView0"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="25KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="20KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="15KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="10KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="5KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView5"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="2.5KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView6"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="1.25KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView7"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="0.5KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView8"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">>

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="0.25KG"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="x0"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/weight"
        android:layout_width="154dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter Weight"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        android:maxLength="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="KG"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="Collars"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <CheckBox
        android:id="@+id/_25kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="25KG"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>
