<resources>
    <string name="app_name">Calculator For Gym Weights</string>
    <string name="plEquipment">Info</string>
    <string name="stepsView">Steps Counter</string>
</resources>